--- a/Notebooks/Employee-Satisfaction-in-Python-PJ.ipynb
+++ b/Notebooks/Employee-Satisfaction-in-Python-PJ.ipynb
@@ -583,37 +583,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2820\\147028994.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2620\\147028994.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  es1['age'] = es1['age'].astype(int)\n",
-      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2820\\147028994.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2620\\147028994.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  es1['job_level'] = es1['job_level'].astype(int)\n",
-      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2820\\147028994.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2620\\147028994.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  es1['rating'] = es1['rating'].astype(int)\n",
-      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2820\\147028994.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2620\\147028994.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  es1['onsite'] = es1['onsite'].astype(int)\n",
-      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2820\\147028994.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2620\\147028994.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  es1['salary'] = es1['salary'].astype(int)\n",
-      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2820\\147028994.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\Prisc\\AppData\\Local\\Temp\\ipykernel_2620\\147028994.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -763,6 +763,16 @@
    ],
    "source": [
     "es1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "48bb455e-593d-4cdb-8010-71c0cd9c95c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es1.to_csv(\"../Data/es1PJ.csv\",index=True)"
    ]
   },
   {
@@ -2413,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "id": "a26ca47e-589d-417c-935d-afce3b018c05",
    "metadata": {},
    "outputs": [
@@ -2427,7 +2437,7 @@
        "       [50.244, 55.756]]))"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2471,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "00f1e805-3647-42f0-983b-6d550f88628f",
    "metadata": {},
    "outputs": [],
@@ -2504,10 +2514,6 @@
    "execution_count": 52,
    "id": "365a8633-ade9-4a81-a800-7bd1607dbc5e",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -2542,10 +2548,6 @@
    "execution_count": 53,
    "id": "e26cb9c2-ed1c-4d0b-abf0-e904105232f6",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -2600,7 +2602,7 @@
       "===============================================================\n",
       "Model:              Logit            Pseudo R-squared: -0.000  \n",
       "Dependent Variable: satisfied        AIC:              693.8163\n",
-      "Date:               2023-03-14 14:43 BIC:              698.0309\n",
+      "Date:               2023-03-14 18:23 BIC:              698.0309\n",
       "No. Observations:   500              Log-Likelihood:   -345.91 \n",
       "Df Model:           0                LL-Null:          -345.90 \n",
       "Df Residuals:       499              LLR p-value:      nan     \n",
@@ -2633,7 +2635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "id": "fd40d0ef-e807-4b91-895d-f79d2957988c",
    "metadata": {},
    "outputs": [],
@@ -2644,7 +2646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "id": "b00c68c1-a1bd-441e-be4a-697d3f1f1a36",
    "metadata": {},
    "outputs": [
@@ -2659,7 +2661,7 @@
       "===============================================================\n",
       "Model:              Logit            Pseudo R-squared: 0.000   \n",
       "Dependent Variable: satisfied        AIC:              693.5267\n",
-      "Date:               2023-03-14 14:48 BIC:              697.7413\n",
+      "Date:               2023-03-14 18:23 BIC:              697.7413\n",
       "No. Observations:   500              Log-Likelihood:   -345.76 \n",
       "Df Model:           0                LL-Null:          -345.90 \n",
       "Df Residuals:       499              LLR p-value:      nan     \n",
@@ -2682,10 +2684,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "03fbb078-97ce-468f-9d16-5522acbef655",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2698295965.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [58]\u001b[1;36m\u001b[0m\n\u001b[1;33m    look for it in R\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "look for it in R"
    ]
