--- a/Notebooks/Employee-Satisfaction-Index-P-CA.ipynb
+++ b/Notebooks/Employee-Satisfaction-Index-P-CA.ipynb
@@ -853,6 +853,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88f90c79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "esi2.to_csv(\"../Data/ESI2CA\",index)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "15304bc7",
    "metadata": {},
@@ -893,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
