--- a/Notebooks/Employee-Satisfaction-Index-P-CA.ipynb
+++ b/Notebooks/Employee-Satisfaction-Index-P-CA.ipynb
@@ -650,6 +650,16 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "9d9e71d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "esi3['certifications'] = esi3['certifications'].astype(bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "7a87529e",
    "metadata": {},
    "outputs": [
@@ -700,7 +710,7 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>86750</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -715,7 +725,7 @@
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>True</td>\n",
        "      <td>42419</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -730,7 +740,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>65715</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -745,7 +755,7 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>29805</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -760,7 +770,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>29805</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -790,7 +800,7 @@
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>6</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>29805</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -805,7 +815,7 @@
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>29805</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -820,7 +830,7 @@
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>24076</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -835,7 +845,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>True</td>\n",
        "      <td>29805</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -850,7 +860,7 @@
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>42419</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -874,22 +884,22 @@
        "499   26     1         1          1                 3          3       4   \n",
        "\n",
        "     onsite  awards  certifications  salary  satisfied  \n",
-       "0         0       1               0   86750       True  \n",
-       "1         1       2               1   42419      False  \n",
-       "2         0       2               0   65715      False  \n",
-       "3         1       0               0   29805       True  \n",
-       "4         0       5               0   29805       True  \n",
+       "0         0       1           False   86750       True  \n",
+       "1         1       2            True   42419      False  \n",
+       "2         0       2           False   65715      False  \n",
+       "3         1       0           False   29805       True  \n",
+       "4         0       5           False   29805       True  \n",
        "..      ...     ...             ...     ...        ...  \n",
-       "495       0       6               0   29805       True  \n",
-       "496       0       2               0   29805      False  \n",
-       "497       0       2               0   24076       True  \n",
-       "498       1       1               1   29805      False  \n",
-       "499       0       3               0   42419      False  \n",
+       "495       0       6           False   29805       True  \n",
+       "496       0       2           False   29805      False  \n",
+       "497       0       2           False   24076       True  \n",
+       "498       1       1            True   29805      False  \n",
+       "499       0       3           False   42419      False  \n",
        "\n",
        "[500 rows x 12 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c1e32487",
    "metadata": {},
    "outputs": [
@@ -928,7 +938,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "2b602820",
    "metadata": {},
    "outputs": [
@@ -951,7 +961,7 @@
        "Name: satisfied, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "27605bbd",
    "metadata": {},
    "outputs": [
@@ -984,7 +994,7 @@
        "Name: satisfied, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "a3680f0f",
    "metadata": {},
    "outputs": [],
@@ -1006,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "41d40d1c",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1026,7 @@
        "(500, 12)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "3ccbebce",
    "metadata": {},
    "outputs": [],
@@ -1038,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "73dbabd6",
    "metadata": {},
    "outputs": [
@@ -1048,7 +1058,7 @@
        "((500, 3), (500,))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "6964b927",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1179,7 @@
        "       0.48452878, 0.49025255, 0.53850046, 0.52049206, 0.52049206])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "29bf8dd9",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1208,7 @@
        "(0.4972260086102294, 0.24861300430511468)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "c3cde64f",
    "metadata": {},
    "outputs": [],
@@ -1226,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "d953d4e8",
    "metadata": {},
    "outputs": [
@@ -1234,16 +1244,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "<__array_function__ internals>:180: RuntimeWarning: Converting input from bool to <class 'numpy.uint8'> for compatibility.\n",
       "<__array_function__ internals>:180: RuntimeWarning: Converting input from bool to <class 'numpy.uint8'> for compatibility.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ae8d53b2e0>"
+       "<seaborn.axisgrid.PairGrid at 0x27f9c443850>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
